Maven no profile needed for embedded ldap and postgres

--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,13 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>io.zonky.test.postgres</groupId>
+                <artifactId>embedded-postgres-binaries-bom</artifactId>
+                <version>16.1.0</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -228,6 +235,19 @@
             <artifactId>selenium-devtools-v126</artifactId>
             <version>4.22.0</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.unboundid</groupId>
+            <artifactId>unboundid-ldapsdk</artifactId>
+            <scope>provided</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>io.zonky.test</groupId>
+            <artifactId>embedded-postgres</artifactId>
+            <version>${zonky-embedded-postgres-runner.version}</version>
+            <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>ch.vorburger.mariaDB4j</groupId>
@@ -423,6 +443,17 @@
                         </exclusion>
                     </exclusions>
                 </dependency>
+                <dependency>
+                    <groupId>io.zonky.test</groupId>
+                    <artifactId>embedded-postgres</artifactId>
+                    <version>${zonky-embedded-postgres-runner.version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>*</groupId>
+                            <artifactId>*</artifactId>
+                        </exclusion>
+                    </exclusions>
+                </dependency>
             </dependencies>
             <build>
                 <plugins>
@@ -438,6 +469,18 @@
                                 <phase>compile</phase>
                             </execution>
                         </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                        <configuration>
+                            <excludes combine.children="append">
+                                <exclude>
+                                    <groupId>com.unboundid</groupId>
+                                    <artifactId>unboundid-ldapsdk</artifactId>
+                                </exclude>
+                            </excludes>
+                        </configuration>
                     </plugin>
                 </plugins>
                 <resources>
@@ -595,46 +638,6 @@
                     <groupId>ch.vorburger.mariaDB4j</groupId>
                     <artifactId>mariaDB4j-db-linux64</artifactId>
                     <version>10.11.5</version>
-                </dependency>
-            </dependencies>
-        </profile>
-
-        <profile>
-            <id>embedded-postgres</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <dependencies>
-                <dependency>
-                    <groupId>io.zonky.test</groupId>
-                    <artifactId>embedded-postgres</artifactId>
-                    <version>${zonky-embedded-postgres-runner.version}</version>
-                    <scope>provided</scope>
-                    <optional>true</optional>
-                </dependency>
-            </dependencies>
-            <dependencyManagement>
-                <dependencies>
-                    <dependency>
-                        <groupId>io.zonky.test.postgres</groupId>
-                        <artifactId>embedded-postgres-binaries-bom</artifactId>
-                        <version>16.1.0</version>
-                        <type>pom</type>
-                        <scope>import</scope>
-                    </dependency>
-                </dependencies>
-            </dependencyManagement>
-        </profile>
-
-        <profile>
-            <id>embedded-ldap</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <dependencies>
-                <dependency>
-                    <groupId>com.unboundid</groupId>
-                    <artifactId>unboundid-ldapsdk</artifactId>
                 </dependency>
             </dependencies>
         </profile>
