--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,6 +49,9 @@ ldap.user-login-filter=(&(${ldap.username-attribute}={0})(objectClass=${ldap.use
 ldap.group-search-base=ou=groups
 
 jwt.auth.secret=QR1Jzl4w+nvbFIoo0dc/zSqTUpE0hLGENjvtOnv8wno=
+jwt.auth.expiration-seconds=7200
+jwt.auth.issuer=com.example.application
+jwt.auth.algorithm=HS256
 
 springdoc.api-docs.path=/openapi/v3/api-docs
 springdoc.default-produces-media-type=application/json
